@@ -547,6 +547,7 @@
 #define IDC_ENABLE_MOUSE_PLAYER         394
 #define IDC_ENABLED                     394
 #define IDC_FLIPPER_ENABLED             394
+#define IDC_PRIMITIVE_IS_TOY            395
 #define IDC_ENABLE_FXAA                 395
 #define IDR_REGISTRY4                   395
 #define IDC_CHECK3                      396
