@@ -1670,13 +1670,14 @@ BEGIN
     EDITTEXT        110,78,32,40,12,ES_AUTOHSCROLL
     EDITTEXT        114,78,45,40,12,ES_AUTOHSCROLL
     EDITTEXT        115,78,58,40,12,ES_AUTOHSCROLL
-    CONTROL         "Collidable",111,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,73,111,10
+    CONTROL         "Collidable",111,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,73,58,10
     LTEXT           "&Elasticity",-1,7,34,63,8
     LTEXT           "&Friction",-1,7,47,63,8
     LTEXT           "&Scatter Angle",-1,7,60,63,8
     EDITTEXT        33,78,19,40,12,ES_AUTOHSCROLL
     LTEXT           "Hit Threshol&d",-1,7,21,70,8
     CONTROL         "Has &Hit Event",34,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,7,60,10
+    CONTROL         "Is Toy",IDC_PRIMITIVE_IS_TOY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,78,73,35,10
 END
 
 
